--- a/assets/static/assets/style/main/_substitutions.scss
+++ b/assets/static/assets/style/main/_substitutions.scss
@@ -34,6 +34,8 @@ $day-info-heading-font-size: 1.15rem;
     & ~ .day-info-label::before {
         @include icon(
                         url('data:image/svg+xml,<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/></svg>'),
+                $width: 1.2em,
+                $height: 1.2em
         );
         vertical-align: text-bottom;
         background-color: var(--body-color);
